# lista6-dawidmuszynski1

./: .gitignore  SpeedDating.ipynb  Wprowadzenie.ipynb  pyproject.toml
