[project]
name = "lista6-dawidmuszynski1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
